crates/nyx-lexer/tests/snapshots/integration_tests__enums__many_variants.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Enum
- LBracket
- U8
- RBracket
- Ident: Opcode
- Newline
- Indent
- Ident: NOP
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: ADD
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Ident: SUB
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: MUL
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "3"
    suffix: ~
- Newline
- Ident: DIV
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4"
    suffix: ~
- Newline
- Ident: MOD
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "5"
    suffix: ~
- Newline
- Ident: AND
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "6"
    suffix: ~
- Newline
- Ident: OR
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "7"
    suffix: ~
- Newline
- Ident: XOR
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "8"
    suffix: ~
- Newline
- Ident: NOT
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "9"
    suffix: ~
- Newline
- Ident: SHL
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "10"
    suffix: ~
- Newline
- Ident: SHR
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "11"
    suffix: ~
- Newline
- Ident: JMP
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "12"
    suffix: ~
- Newline
- Ident: JZ
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "13"
    suffix: ~
- Newline
- Ident: JNZ
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "14"
    suffix: ~
- Newline
- Ident: CALL
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "15"
    suffix: ~
- Newline
- Ident: RET
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "16"
    suffix: ~
- Newline
- Ident: PUSH
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "17"
    suffix: ~
- Newline
- Ident: POP
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "18"
    suffix: ~
- Newline
- Ident: HALT
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "255"
    suffix: ~
- Newline
- Dedent
