crates/nyx-lexer/tests/snapshots/integration_tests__enums__simple.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Enum
- Ident: Direction
- Newline
- Indent
- Ident: UP
- Newline
- Ident: DOWN
- Newline
- Ident: LEFT
- Newline
- Ident: RIGHT
- Newline
- Dedent
