crates/nyx-lexer/tests/snapshots/integration_tests__enums__visibility.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Public
- Enum
- Ident: Visibility
- Newline
- Indent
- Ident: PUBLIC
- Newline
- Ident: PRIVATE
- Newline
- Ident: PROTECTED
- Newline
- Dedent
- Export
- Enum
- Ident: ExportedStatus
- Newline
- Indent
- Ident: ACTIVE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: INACTIVE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Ident: PENDING
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Dedent
