crates/nyx-lexer/tests/snapshots/integration_tests__enums__with_requires.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Enum
- LBracket
- U8
- RBracket
- Ident: Error
- Newline
- Indent
- Requires
- Newline
- Indent
- Ident: Display
- Newline
- Ident: Debug
- Newline
- Dedent
- Ident: NONE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: IO_ERROR
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Ident: PARSE_ERROR
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: NOT_FOUND
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "3"
    suffix: ~
- Newline
- Dedent
